pretty homescreen and power-ups

--- a/client/home.html
+++ b/client/home.html
@@ -68,9 +68,9 @@
 
 <div class="hero-unit">
 	<h1>Water Rush</h1>
-	<p><button class="btn btn-large btn-primary" type="button" ng-click="PreGame(1)">Level 1</button></p>
-	<p><button class="btn btn-large btn-primary" type="button" ng-click="PreGame(2)">Level 2</button></p>
-	<p><button class="btn btn-large btn-primary" type="button" ng-click="PreGame(3)">Level 3</button></p>
+	<div class="l1"><button class="btn btn-large btn-primary" type="button" ng-click="PreGame(1)">Level 1</button></div>
+	<div class="l2"><button class="btn btn-large btn-primary" type="button" ng-click="PreGame(2)">Level 2</button></div>
+	<div class="l3"><button class="btn btn-large btn-primary" type="button" ng-click="PreGame(3)">Level 3</button></div>
 </div>
 
 </div>
