--- a/client/gameplay_tail.html
+++ b/client/gameplay_tail.html
@@ -1,10 +1,15 @@
 	<!-- Extra Padding -->
 	<div id="guard"></div>
-
+	<div class="panel-container">
 	<!-- Control Panel -->
 	<div class="control-panel">
 		<button class="btn btn-large btn-block btn-info" type="button" id="freeze">Freeze<br/><span class="badge badge-important button-badge" id="nFreeze"></span></button>
 		<button class="btn btn-large btn-block btn-success" type="button" id="boom">Boom<br/><span class="badge badge-important button-badge" id="nBoom"></span></button>
 		<button class="btn btn-large btn-block btn-warning" type="button" id="reQueue">ReQueue<br/><span class="badge badge-important button-badge" id="nReQ"></span></button>
+	</div>
+	<!-- Quit Button Panel --> 
+	<div class="quit-panel">
 		<button class="btn btn-large btn-block btn-danger" type="button" id="exitLevel">Quit</button>
 	</div>
+</div>
+
