--- a/client/gameplay_tail.html
+++ b/client/gameplay_tail.html
@@ -12,4 +12,5 @@
 		<button class="btn btn-large btn-block btn-danger" type="button" id="exitLevel">Quit</button>
 	</div>
 </div>
+</div> <!--game-container-->
 
