--- a/client/gameplay0.html
+++ b/client/gameplay0.html
@@ -9,10 +9,12 @@
 </script>
 <script src="js/jquery.min.js"></script>
 <script src="js/game_dependencies.js"></script>
+
+<div class="game-container">
 <div id="head"></div>
 
 	<!-- Parameters of this level -->
-	<div id="parameters" baseScore="300" scoreMultiplier="4" totalSquares="45" flowSpeed="0.14" level="0"></div>
+	<div id="parameters" baseScore="300" scoreMultiplier="4" totalSquares="45"></div>
 
 	<!-- Game Board -->
 	<div id="board">
