--- a/client/gameplay1.html
+++ b/client/gameplay1.html
@@ -10,6 +10,7 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/game_dependencies.js"></script>
 
+<div class="game-container">
 <div id="head"></div>
 
 	<!-- Parameters of this level -->
