--- a/client/gameplay3.html
+++ b/client/gameplay3.html
@@ -9,6 +9,8 @@
 </script>
 <script src="js/jquery.min.js"></script>
 <script src="js/game_dependencies.js"></script>
+
+<div class="game-container">
 <div id="head"></div>
 
 	<!-- Parameters of this level -->
